--- a/Index.html
+++ b/Index.html
@@ -27,9 +27,9 @@
     https://developers.google.com/web/updates/2018/06/ar-for-the-web
     https://github.com/google-ar/three.ar.js -->
       <!-- <a-marker-camera preset='custom' type='pattern' url='./tracker_pattern/pattern-marker.patt'>
-        <!-- <a-entity gltf-model="#jar" scale="0.25 0.25 0.25"></a-entity> -->
+         <a-entity gltf-model="#jar" scale="0.25 0.25 0.25"></a-entity> -->
         <!-- <a-box position='0 0.5 0' material='color: blue;'> -->
-      </a-marker-camera> -->
+      <!-- </a-marker-camera> -->
       <a-entity camera></a-entity>
     </a-scene>
   </body>
