--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
           <a-asset-item id="animated-asset" src="./GLTFs/test_jar.gltf"></a-asset-item>
         <a-asset-item id="cesium" src="https://raw.githubusercontent.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-playground/models/CesiumMan.gltf"></a-asset-item>
     </a-assets>
-  	<a-marker preset='custom' type='pattern' url='./tracker_pattern/pattern-grey_marker_test.patt'>
+  	<!-- <a-marker preset='custom' type='pattern' url='./tracker_pattern/pattern-grey_marker_test.patt'>
         <a-entity
           gltf-model="#animated-asset"
           scale="0.1 0.1 0.1">
         </a-entity>
-    </a-marker>
+    </a-marker> -->
 
     <a-marker preset='custom' type='pattern' url='./tracker_pattern/pattern-marker.patt'>
       <a-entity
