--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
           <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/JacobYoung115/webar/master/GLTFs/test_jar.gltf"></a-asset-item>
         <a-asset-item id="cesium" src="https://raw.githubusercontent.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-playground/models/CesiumMan.gltf"></a-asset-item>
     </a-assets>
-  	<a-marker preset='custom' type='pattern' url='https://raw.githubusercontent.com/JacobYoung115/webar/master/tracker_pattern/pattern-grey_marker_test.patt'>
+  	<!-- <a-marker preset='custom' type='pattern' url='https://raw.githubusercontent.com/JacobYoung115/webar/master/tracker_pattern/pattern-grey_marker_test.patt'>
         <a-entity
           gltf-model="#animated-asset"
           scale="0.1 0.1 0.1">
         </a-entity>
-    </a-marker>
+    </a-marker> -->
 
     <!-- <a-marker preset='custom' type='pattern' url='./tracker_pattern/pattern-marker.patt'>
       <a-entity
@@ -34,10 +34,10 @@
     http://www.createwebxr.com/webAR.html
     https://developers.google.com/web/updates/2018/06/ar-for-the-web
     https://github.com/google-ar/three.ar.js -->
-      <!-- <a-marker-camera preset='custom' type='pattern' url='./tracker_pattern/pattern-marker.patt'>
-         <a-entity gltf-model="#jar" scale="0.25 0.25 0.25"></a-entity> -->
-        <!-- <a-box position='0 0.5 0' material='color: blue;'> -->
-      <!-- </a-marker-camera> -->
+      <a-marker-camera preset='custom' type='pattern' url='https://raw.githubusercontent.com/JacobYoung115/webar/master/tracker_pattern/pattern-marker.patt'>
+         <a-entity gltf-model="#animated-asset" scale="0.1 0.1 0.1"></a-entity>
+      </a-marker-camera>
+
       <a-entity camera></a-entity>
     </a-scene>
   </body>
